<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/fundo"
    tools:context="br.com.correiam.checkmeta.MetaActivity">

    <EditText style="@style/tvFullParent"
        android:id="@+id/tvIdMetaActivity"
        android:visibility="gone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_meta"
        android:layout_marginTop="10dp"/>

    <EditText style="@style/tvFullParent"
        android:id="@+id/etNome"
        android:inputType="textCapSentences"
        android:singleLine="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descricao_meta"
        android:layout_marginTop="10dp"/>

    <EditText style="@style/tvFullParent"
        android:id="@+id/etDescricao"
        android:inputType="textCapSentences"
        android:maxLines="5"
        android:maxLength="255"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/duedate_meta"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/etDueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:editable="false"
        android:onClick="showDatePickerDialog" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_meta"
        android:visibility="gone"/>

    <EditText style="@style/tvFullParent"
        android:id="@+id/etStatus"
        android:visibility="gone"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/tvDataRealizada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_realizada"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/etActualDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:editable="true"
        android:onClick="showDatePickerDialog"
        android:visibility="gone" />

</LinearLayout>
